# que_hacer

./: .gitignore  README.md  app.py  chuleta.py  create_data.sql  data.py  deberes.py  fragments.sql  middleware.py  models.py  old_data.py  pyproject.toml  services.py  test_db.py  user_man.py  vcal_artesanal.ics  vcal_artesanal.py
artwork/: checkmark.xcf
backup/: functionalidad.py  vcal-usage.py  vcal_battery.ics  vcal_battery.py
module/: miherramienta.py  mimodulo.py
templates/: error.html  header.html  index.html  login.html  tasks.html
vcal/: vcal-usage.py  vcal_artesanal.ics  vcal_artesanal.py  vcal_battery.ics  vcal_battery.py
